--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body{
-    font-family: 'Roboto Serif', serif;
+    font-family: 'Secular One', sans-serif;
 }
 h1{
     font-size: 50px;
+}
+
+.orange-color{
+    color: orange;
 }
