--- a/style.css
+++ b/style.css
@@ -8,3 +8,21 @@ h1{
 .orange-color{
     color: orange;
 }
+
+.container{
+    display: inline-block;
+}
+
+section{
+    display: flex;
+
+}
+
+.half-width{
+    width: 50%; 
+    padding: 2%;
+}
+
+.half-width img{
+   width: 90%;
+}
