--- a/style.css
+++ b/style.css
@@ -26,3 +26,8 @@ section{
 .half-width img{
    width: 90%;
 }
+.link-button{
+    text-decoration: none;
+    background-color: orange;
+    padding: 10px 40px;
+}
