--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ section{
 }
 .link-button{
     text-decoration: none;
-    background-color: orange;
+    background-image: linear-gradient(orange, tomato);
     padding: 10px 40px;
-    border-radius: 5px;
+    border-radius: 8px;
 }
