--- a/style.css
+++ b/style.css
@@ -30,5 +30,7 @@ section{
     text-decoration: none;
     background-image: linear-gradient(orange, tomato);
     padding: 10px 40px;
+    color: white;
+    font-weight: 700;
     border-radius: 8px;
 }
