--- a/style.css
+++ b/style.css
@@ -1,48 +1,78 @@
-body{
+body {
     font-family: 'Secular One', sans-serif;
     margin: 0;
 }
-h1{
+
+h1 {
     font-size: 50px;
 }
 
-.orange-color{
+h2 {
+    font-size: 40px;
+}
+
+.orange-color {
     color: orange;
 }
 
-.container{
-    display: inline-block;
-}
-
-section{
+.flexible-part {
     display: flex;
     margin-bottom: 150px;
 
 }
-.top-banner{
+
+.top-banner {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 
 }
-.dream-big{
+
+.dream-big {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
 }
 
-.half-width{
-    width: 50%; 
+.half-width {
+    width: 50%;
     padding: 2%;
 }
 
-.half-width img{
-   width: 90%;
+.experience-item {
+    width: 50%;
+    margin-left: 60px;
+    margin-right: 60px;
+    padding: 11px 36px;
+    box-shadow: 4px 4px 5px 3px gray;
+
 }
-.link-button{
+
+.background-img {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+}
+
+.half-width img {
+    width: 90%;
+}
+
+.link-button {
     text-decoration: none;
     background-image: linear-gradient(orange, tomato);
     padding: 10px 40px;
     color: white;
     font-weight: 700;
     border-radius: 8px;
+}
+
+#full-stack-developer {
+    border-left: 7px solid tomato;
+}
+
+#baby-stack-developer {
+    border-left: 7px solid blue;
+}
+
+footer {
+    text-align: center;
 }
